--- a/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
@@ -404,9 +404,9 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_megacam_r'],\n",
-    "    master_catalogue['m_ap_megacam_r'] - master_catalogue['m_megacam_r'],\n",
-    "    \"r total magnitude (CFHT)\", \"r aperture mag - total mag (CFHT)\",\n",
+    "    master_catalogue['m_gpc1_r'],\n",
+    "    master_catalogue['m_ap_gpc1_r'] - master_catalogue['m_gpc1_r'],\n",
+    "    \"r total magnitude (gpc1)\", \"r aperture mag - total mag (gpc1)\",\n",
     "    master_catalogue[\"stellarity\"],\n",
     "    invert_x=True\n",
     ")"
