HS82 run on Vulcain
Need to make depth map production work on large file

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -16,16 +16,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
-      "  warnings.warn(msg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
@@ -67,31 +58,31 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table4547832800-892334\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140647863738264-877525\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>20171202</td><td>20171211</td><td>285786</td><td>9.0</td><td>241231680</td><td>241.23 MB</td></tr>\n",
-       "<tr><td>1</td><td>AKARI-SEP</td><td>20180122</td><td>20180201</td><td>844172</td><td>9.0</td><td>524255040</td><td>524.26 MB</td></tr>\n",
-       "<tr><td>2</td><td>Bootes</td><td>20180111</td><td>20180111</td><td>3388482</td><td>11.0</td><td>4537221120</td><td>4.54 GB</td></tr>\n",
-       "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180129</td><td>20180130</td><td>2171051</td><td>13.0</td><td>5731646400</td><td>5.73 GB</td></tr>\n",
-       "<tr><td>4</td><td>COSMOS</td><td>20180112</td><td>20180201</td><td>2779194</td><td>5.0</td><td>4630199040</td><td>4.63 GB</td></tr>\n",
-       "<tr><td>5</td><td>EGS</td><td>20171202</td><td>20171202</td><td>1412613</td><td>4.0</td><td>3890416320</td><td>3.89 GB</td></tr>\n",
-       "<tr><td>6</td><td>ELAIS-N1</td><td>20171016</td><td>20171016</td><td>4026292</td><td>14.0</td><td>5242279680</td><td>5.24 GB</td></tr>\n",
-       "<tr><td>7</td><td>ELAIS-N2</td><td>20171207</td><td>20180201</td><td>1783240</td><td>9.0</td><td>1941984000</td><td>1.94 GB</td></tr>\n",
-       "<tr><td>8</td><td>ELAIS-S1</td><td>20180122</td><td>20180201</td><td>1655564</td><td>9.0</td><td>1908901440</td><td>1.91 GB</td></tr>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.0</td><td>348848640</td><td>348.85 MB</td></tr>\n",
+       "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>9.0</td><td>538606080</td><td>538.61 MB</td></tr>\n",
+       "<tr><td>2</td><td>Bootes</td><td>20180216</td><td>20180227</td><td>3367490</td><td>11.0</td><td>4310429760</td><td>4.31 GB</td></tr>\n",
+       "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180221</td><td>20180221</td><td>2171051</td><td>13.0</td><td>5705593920</td><td>5.71 GB</td></tr>\n",
+       "<tr><td>4</td><td>COSMOS</td><td>20180217</td><td>20180217</td><td>2599374</td><td>5.0</td><td>10441782720</td><td>10.44 GB</td></tr>\n",
+       "<tr><td>5</td><td>EGS</td><td>20180217</td><td>20180217</td><td>1412613</td><td>4.0</td><td>3778816320</td><td>3.78 GB</td></tr>\n",
+       "<tr><td>6</td><td>ELAIS-N1</td><td>20171016</td><td>20180216</td><td>4026292</td><td>14.0</td><td>5242279680</td><td>5.24 GB</td></tr>\n",
+       "<tr><td>7</td><td>ELAIS-N2</td><td>20180218</td><td>20180218</td><td>1783240</td><td>9.0</td><td>2007964800</td><td>2.01 GB</td></tr>\n",
+       "<tr><td>8</td><td>ELAIS-S1</td><td>20180221</td><td>20180221</td><td>1655564</td><td>9.0</td><td>1970156160</td><td>1.97 GB</td></tr>\n",
        "<tr><td>9</td><td>GAMA-09</td><td>20171206</td><td>20171206</td><td>12937982</td><td>62.0</td><td>19652852160</td><td>19.65 GB</td></tr>\n",
-       "<tr><td>10</td><td>GAMA-12</td><td>20180129</td><td>20180129</td><td>12369415</td><td>63.0</td><td>14385677760</td><td>14.39 GB</td></tr>\n",
-       "<tr><td>11</td><td>GAMA-15</td><td>20180129</td><td>20180129</td><td>14232880</td><td>62.0</td><td>16310928960</td><td>16.31 GB</td></tr>\n",
-       "<tr><td>12</td><td>HDF-N</td><td>20171212</td><td>20180201</td><td>130679</td><td>1.0</td><td>188346240</td><td>188.35 MB</td></tr>\n",
-       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180113</td><td>20180113</td><td>49243287</td><td>363.0</td><td>111585386880</td><td>111.59 GB</td></tr>\n",
-       "<tr><td>14</td><td>Lockman-SWIRE</td><td>20171201</td><td>20171201</td><td>4366298</td><td>22.0</td><td>5108604480</td><td>5.11 GB</td></tr>\n",
-       "<tr><td>15</td><td>NGP</td><td>20171207</td><td>20171207</td><td>6759591</td><td>178.0</td><td>4704701760</td><td>4.7 GB</td></tr>\n",
-       "<tr><td>16</td><td>SA13</td><td>20171123</td><td>20180201</td><td>9799</td><td>0.0</td><td>2554560</td><td>2.55 MB</td></tr>\n",
-       "<tr><td>17</td><td>SGP</td><td>20180124</td><td>20180124</td><td>29790690</td><td>295.0</td><td>48529091520</td><td>48.53 GB</td></tr>\n",
-       "<tr><td>18</td><td>SPIRE-NEP</td><td>20171122</td><td>20171122</td><td>2674</td><td>0.0</td><td>1157760</td><td>1.16 MB</td></tr>\n",
-       "<tr><td>19</td><td>SSDF</td><td>20180122</td><td>20180122</td><td>12661903</td><td>111.0</td><td>7825080960</td><td>7.83 GB</td></tr>\n",
-       "<tr><td>20</td><td>xFLS</td><td>20171201</td><td>20171201</td><td>977148</td><td>7.0</td><td>1050474240</td><td>1.05 GB</td></tr>\n",
-       "<tr><td>21</td><td>XMM-13hr</td><td>20171123</td><td>20180201</td><td>38629</td><td>1.0</td><td>10019520</td><td>10.02 MB</td></tr>\n",
-       "<tr><td>22</td><td>XMM-LSS</td><td>20180130</td><td>20180130</td><td>8752529</td><td>22.0</td><td>33819894720</td><td>33.82 GB</td></tr>\n",
+       "<tr><td>10</td><td>GAMA-12</td><td>20180218</td><td>20180218</td><td>12369415</td><td>63.0</td><td>14633066880</td><td>14.63 GB</td></tr>\n",
+       "<tr><td>11</td><td>GAMA-15</td><td>20180213</td><td>20180213</td><td>14232880</td><td>62.0</td><td>16595585280</td><td>16.6 GB</td></tr>\n",
+       "<tr><td>12</td><td>HDF-N</td><td>20180219</td><td>20180219</td><td>130679</td><td>1.0</td><td>183251520</td><td>183.25 MB</td></tr>\n",
+       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180301</td><td>20180301</td><td>50196455</td><td>363.0</td><td>127047306240</td><td>127.05 GB</td></tr>\n",
+       "<tr><td>14</td><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.0</td><td>5195931840</td><td>5.2 GB</td></tr>\n",
+       "<tr><td>15</td><td>NGP</td><td>20180219</td><td>20180219</td><td>6759591</td><td>178.0</td><td>4954806720</td><td>4.95 GB</td></tr>\n",
+       "<tr><td>16</td><td>SA13</td><td>20180219</td><td>20180219</td><td>9799</td><td>0.0</td><td>2721600</td><td>2.72 MB</td></tr>\n",
+       "<tr><td>17</td><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>295.0</td><td>45192530880</td><td>45.19 GB</td></tr>\n",
+       "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.0</td><td>1203840</td><td>1.2 MB</td></tr>\n",
+       "<tr><td>19</td><td>SSDF</td><td>20180122</td><td>20180221</td><td>12661903</td><td>111.0</td><td>7825080960</td><td>7.83 GB</td></tr>\n",
+       "<tr><td>20</td><td>xFLS</td><td>20180221</td><td>20180221</td><td>977148</td><td>7.0</td><td>1050474240</td><td>1.05 GB</td></tr>\n",
+       "<tr><td>21</td><td>XMM-13hr</td><td>20180221</td><td>20180221</td><td>38629</td><td>1.0</td><td>10676160</td><td>10.68 MB</td></tr>\n",
+       "<tr><td>22</td><td>XMM-LSS</td><td>20180221</td><td>20180221</td><td>8704751</td><td>22.0</td><td>28238313600</td><td>28.24 GB</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -115,14 +106,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4547832800-892334').dataTable()\");\n",
+       "    console.log(\"$('#table140647863738264-877525').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4547832800-892334').dataTable({\n",
+       "    $('#table140647863738264-877525').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -147,36 +138,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./dmu32_AKARI-NEP/data/AKARI-NEP_20171202.fits\n",
-      "./dmu32_AKARI-SEP/data/AKARI-SEP_20180122.fits\n",
-      "./dmu32_Bootes/data/Bootes_20180111.fits\n",
-      "./dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180129.fits\n",
-      "./dmu32_COSMOS/data/COSMOS_20180112.fits\n",
-      "./dmu32_EGS/data/EGS_20171202.fits\n",
+      "./dmu32_AKARI-NEP/data/AKARI-NEP_20180215.fits\n",
+      "./dmu32_AKARI-SEP/data/AKARI-SEP_20180221.fits\n",
+      "./dmu32_Bootes/data/Bootes_20180216.fits\n",
+      "./dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180221.fits\n",
+      "./dmu32_COSMOS/data/COSMOS_20180217.fits\n",
+      "./dmu32_EGS/data/EGS_20180217.fits\n",
       "./dmu32_ELAIS-N1/data/ELAIS-N1_20171016.fits\n",
-      "./dmu32_ELAIS-N2/data/ELAIS-N2_20171207.fits\n",
-      "./dmu32_ELAIS-S1/data/ELAIS-S1_20180122.fits\n",
+      "./dmu32_ELAIS-N2/data/ELAIS-N2_20180218.fits\n",
+      "./dmu32_ELAIS-S1/data/ELAIS-S1_20180221.fits\n",
       "./dmu32_GAMA-09/data/GAMA-09_20171206.fits\n",
-      "./dmu32_GAMA-12/data/GAMA-12_20180129.fits\n",
-      "./dmu32_GAMA-15/data/GAMA-15_20180129.fits\n",
-      "./dmu32_HDF-N/data/HDF-N_20171212.fits\n",
-      "./dmu32_Herschel-Stripe-82/data/Herschel-Stripe-82_20180113.fits\n",
-      "./dmu32_Lockman-SWIRE/data/Lockman-SWIRE_20171201.fits\n",
-      "./dmu32_NGP/data/NGP_20171207.fits\n",
-      "./dmu32_SA13/data/SA13_20171123.fits\n",
-      "./dmu32_SGP/data/SGP_20180124.fits\n",
-      "./dmu32_SPIRE-NEP/data/SPIRE-NEP_20171122.fits\n",
+      "./dmu32_GAMA-12/data/GAMA-12_20180218.fits\n",
+      "./dmu32_GAMA-15/data/GAMA-15_20180213.fits\n",
+      "./dmu32_HDF-N/data/HDF-N_20180219.fits\n",
+      "./dmu32_Herschel-Stripe-82/data/Herschel-Stripe-82_20180301.fits\n",
+      "./dmu32_Lockman-SWIRE/data/Lockman-SWIRE_20180219.fits\n",
+      "./dmu32_NGP/data/NGP_20180219.fits\n",
+      "./dmu32_SA13/data/SA13_20180219.fits\n",
+      "./dmu32_SGP/data/SGP_20180221.fits\n",
+      "./dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220.fits\n",
       "./dmu32_SSDF/data/SSDF_20180122.fits\n",
-      "./dmu32_xFLS/data/xFLS_20171201.fits\n",
-      "./dmu32_XMM-13hr/data/XMM-13hr_20171123.fits\n",
-      "./dmu32_XMM-LSS/data/XMM-LSS_20180130.fits\n"
+      "./dmu32_xFLS/data/xFLS_20180221.fits\n",
+      "./dmu32_XMM-13hr/data/XMM-13hr_20180221.fits\n",
+      "./dmu32_XMM-LSS/data/XMM-LSS_20180221.fits\n"
      ]
     }
    ],
@@ -207,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
