RCSLenS fix on HS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.9_RCSLenS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.9_RCSLenS.ipynb
@@ -43,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -151,12 +153,17 @@
     "    if col.startswith('m_'):\n",
     "        \n",
     "        errcol = \"merr{}\".format(col[1:])\n",
-    "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
+    "\n",
     "           \n",
     "        # Remove missing values (-99, 99?) and extreme magnitudes (see above).\n",
-    "        mask = (catalogue[col] < 0.) | (catalogue[col] > 80.)\n",
+    "        mask = ((catalogue[col] < 0.) \n",
+    "                | (catalogue[col] > 80.)\n",
+    "                | (catalogue[errcol] < 0.)\n",
+    "               | (catalogue[errcol] > 80.))\n",
     "        catalogue[col][mask] = np.nan\n",
     "        catalogue[errcol][mask] = np.nan       \n",
+    "        \n",
+    "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
     "        catalogue.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
@@ -483,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
