Vega to AB on NDWFS TIFKAM and rename from mosaic

--- a/dmu1/dmu1_ml_Bootes/1.5_NDWFS.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1.5_NDWFS.ipynb
@@ -45,11 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "#%config InlineBackend.figure_format = 'svg'\n",
@@ -128,10 +135,10 @@
     "        'b_magerr_aper_02': \"merr_ap_mosaic_b\", \n",
     "        'b_mag_auto': \"m_mosaic_b\", \n",
     "        'b_magerr_auto': \"merr_mosaic_b\",\n",
-    "            'k_mag_aper_02': \"m_ap_mosaic_ks\", \n",
-    "        'k_magerr_aper_02': \"merr_ap_mosaic_ks\", \n",
-    "        'k_mag_auto': \"m_mosaic_ks\", \n",
-    "        'k_magerr_auto': \"merr_mosaic_ks\"\n",
+    "            'k_mag_aper_02': \"m_ap_tifkam_ks\", \n",
+    "        'k_magerr_aper_02': \"merr_ap_tifkam_ks\", \n",
+    "        'k_mag_auto': \"m_tifkam_ks\", \n",
+    "        'k_magerr_auto': \"merr_tifkam_ks\"\n",
     "    })\n",
     "\n",
     "\n",
@@ -143,6 +150,19 @@
     "\n",
     "# Clean table metadata\n",
     "catalogue.meta = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# http://svo2.cab.inta-csic.es/svo/theory/fps3/index.php?mode=browse&gname=KPNO&gname2=TIFKAM\n",
+    "# ZP 688.5 taken from above\n",
+    "ks_to_AB = 2.5 * np.log10(3631/688.5)"
    ]
   },
   {
@@ -174,6 +194,8 @@
     "        catalogue[col][mask] = np.nan\n",
     "        catalogue[errcol][mask]  = np.nan  \n",
     "        \n",
+    "        if col.endswith('tifkam_ks'):\n",
+    "            catalogue[col] += ks_to_AB\n",
     "\n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
@@ -284,7 +306,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_ap_mosaic_b', 'merr_ap_mosaic_i', 'merr_ap_mosaic_r', 'merr_ap_mosaic_ks']\n",
+    "SORT_COLS = ['merr_ap_mosaic_b', 'merr_ap_mosaic_i', 'merr_ap_mosaic_r', 'merr_ap_tifkam_ks']\n",
     "FLAG_NAME = 'ndwfs_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
@@ -493,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
