--- a/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
@@ -948,6 +948,8 @@
     "    1 * ~np.isnan(master_catalogue['f_newfirm_h']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_newfirm_k']) +\n",
     "    \n",
+    "    1 * ~np.isnan(master_catalogue['f_tifkam_ks']) +\n",
+    "    \n",
     "    1 * ~np.isnan(master_catalogue['f_ukidss_j']) \n",
     "\n",
     ")\n",
@@ -1173,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
