Lockman SWIRE full cigale input prep - all 4 inputs

--- a/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -79,12 +79,12 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "good = {}\n",
+    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -102,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -131,8 +131,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue.copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()\n"
    ]
   },
   {
@@ -253,8 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue.copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()\n"
    ]
   },
   {
@@ -387,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
