Lockman-SWIRE final Cigale input produced on Hedam

--- a/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
@@ -146,7 +146,7 @@
     "# # XID+ SPIRE\n",
     "\n",
     "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_Lockman-SWIRE/data/\"\n",
-    "                          \"dmu26_XID+SPIRE_Lockman-SWIRE_cat_20180220.fits\")\n",
+    "                          \"dmu26_XID+SPIRE_Lockman-SWIRE_20180220.fits\")\n",
     "xid_spire.meta = None\n",
     "\n",
     "xid_spire['HELP_ID'].name = \"help_id\"\n",
@@ -215,7 +215,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:5: RuntimeWarning: invalid value encountered in less\n"
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
      ]
     }
    ],
@@ -319,7 +320,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if FIRST_RUN_FOR_CIGALE:\n",
     "    \n",
@@ -490,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
