Replace Laigle photo-z with Kens on COSMOS

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -241,13 +241,12 @@
    ],
    "source": [
     "# Photo-z\n",
-    "#Get photoz from COSMOS2015 catalogue\n",
     "\n",
-    "photoz = Table.read(\"../../dmu0/dmu0_COSMOS2015/data/COSMOS2015-HELP_selected_20160613.fits\")['help_id', 'zminchi2']\n",
+    "photoz = Table.read(\"../../dmu24/dmu24_COSMOS/data/COSMOS2015-HELP_selected_20160613_photoz_v1.0.fits\")\n",
     "photoz.meta = None\n",
     "\n",
-    "#photoz = photoz['help_id', 'z1_median']\n",
-    "photoz['zminchi2'].name = 'redshift'\n",
+    "photoz = photoz['help_id', 'z1_median']\n",
+    "photoz['z1_median'].name = 'redshift'\n",
     "\n",
     "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
