HS82 rerun fro zspec Cigale input

--- a/dmu28/dmu28_Herschel-Stripe-82/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Herschel-Stripe-82/CIGALE_catalogue_preparation.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = '20180301'\n",
+    "SUFFIX = '20180307'\n",
     "file_list = glob.glob('../../dmu32/dmu32_Herschel-Stripe-82/data/tiles/Herschel-Stripe-82_cigale_{}_*.fits'.format(SUFFIX))"
    ]
   },
@@ -224,7 +224,7 @@
     "    file_num = tile.split('_')[4].split('.')[0]\n",
     "    best_catalogue = Table.read(tile)\n",
     "\n",
-    "\n",
+    "    best_catalogue['zspec'].name = 'redshift'\n",
     "\n",
     "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
     "\n",
@@ -247,7 +247,7 @@
     "    remove_unneeded_fluxes(h_bands)\n",
     "    remove_unneeded_fluxes(k_bands)\n",
     "\n",
-    "    best_catalogue.write(\"data_tmp/tiles/herschel-stripe-82_cigale_all_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+    "    best_catalogue.write(\"data_tmp/tiles/herschel-stripe-82_cigale_optnir_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   }
  ],
