--- a/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
@@ -45,7 +45,7 @@
     "# to continue and merge the CIGALE results too.\n",
     "FIRST_RUN_FOR_CIGALE = True\n",
     "\n",
-    "SUFFIX = '20180301'"
+    "SUFFIX = '20180307'"
    ]
   },
   {
@@ -336,9 +336,9 @@
     "        ml = Table.read(tile)\n",
     "        ml.meta = None\n",
     "        \n",
-    "        ml['zspec'].name = 'redshift'\n",
+    "        #ml['zspec'].name = 'redshift'\n",
     "\n",
-    "        ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values\n",
+    "        ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values\n",
     "        \n",
     "        \n",
     "        #ADD in XID+ merging here\n",
